assets/css/style.css
/* ---------- POPPINS FONT ---------- */
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');  

/* ---------- VARIABLES ---------- */
:root {
    --body-color: rgb(250, 250, 250);
    --color-white: rgb(255, 255, 255);

    --text-color-second:rgb(68, 68, 68);
    --text-color-third: rgb(30, 159, 171);
    
    --first-color:rgb(110, 87, 224);
    --first-color-hover: rgb(40, 91, 212);

    --second-color:rgb(0, 201, 255);
    --third-color: rgb(192, 166, 49);
    --first-shadow-color: rgba(0, 0, 0, 0.18);
}
/* ---------- BASE ---------- */
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'poppins', sans-serif;
}

/* ---------- SMOOTH SCROLL ---------- */
html{
    scroll-behavior: smooth;
}

/* ---------- CHANGE THE SCROLL BAR ---------- */
::-webkit-scrollbar{
    width: 10px;
    border-radius: 25px;
}
::-webkit-scrollbar-track{
    background: #f1f1f1;
}
::-webkit-scrollbar-thumb{
    background: #ccc;
    border-radius: 30px;
}
::-webkit-scrollbar-thumb:hover{
    background:#bbb;
}

/* ---------- REUSABLE CSS ### ---------- */

/* ---------- GLOBAL BUTTON DESIGN ---------- */
.btn{
    background: #fefefeff;
    border: none;
    padding: 12px 20px;
    border-radius: 10px;
    font-size: 14px;
    font-weight: 500;
    transition: .4s;
    cursor: pointer;
}
.btn>i{
    margin-left: 5px;
}
.btn:hover{
    background: var(--second-color);
    color: var(--color-white);
}

/* ---------- GLOBAL ICONS DESIGN ---------- */
i{
    font-size: 16px;
}

/* ---------- BASE ---------- */
body{
    background: var(--body-color);
}

.container{
   width: 100%;
   position: relative;
}


/* ---------- NAVIGATION BAR---------- */
nav{
    position: fixed;
    display: flex;
    justify-content: space-between;
    width: 100%;
    height: 90px;
    line-height: 90px;
    background: var(--body-color);
    padding-inline: 9vw;
    z-index: 1000;
}
.nav .logo{
   position : relative;
}
.nav-name{
    font-size: 30px;
    font-weight: 600;
    color: var(--text-color-third);
}
.nav-logo span{
    position: absolute;
    top: -15px;
    right: -20px;
    font-size: 5em;
    color: var(--text-color-second);
}

.nav-menu, .nav_menu_list{
    display: flex;
}
.nav-menu .nav_list{
    list-style: none;
    position: relative;
}

.nav-link{
    text-decoration: none;
    color: var(--text-color-second);
    font-size: 18px;
    font-weight: 500;
    padding: 15px;
    margin-inline: 20px;
}
.nav-menu-btn{
    display: none;
}  
.nav-menu-btn i{
    font-size: 28px;
    cursor: pointer;
}

/* ---------- WRAPPERDESIGN ---------- */

.wrapper{
  padding-inline: 10vw;
}

/* ---------- FRATURED BOX ---------- */
.featured-box{
    position: relative;
    display: flex;
    height: 100vh;
    min-height: 700px;
}

/* ---------- FEATURED TEXT BOX ---------- */
.featured-text{
    position: relative;
    display: flex;
    justify-content: center;
    align-items: justify;
    min-height: 80vh;
    flex-direction: column;
    width: 50%;
    padding: 20px;
    
}
.featured-text-card span{
    background-color: var(--third-color);
    color: var(--color-white);
    font-size: 12px;
    border-radius: 5px;
    
}
.featured-name{
    font-size: 50px;
    font-weight: 600;
    color: var(--text-color-second);
    margin-block: 20px;
}
.typedText{
    text-transform: capitalize;
    color: var(--text-color-third);
}
.featured-text-info{
    font-size: 15px;
    margin-bottom: 30px;
    color: var(--text-color-second);
}
.featured-text-btn{
    display: flex;
    gap: 20px;
}
.featured-text-btn>.blue-btn{
    background-color: var(--first-color);
    color: var(--color-white);
}
.featured-text-btn>.blue-btn:hover{
    background-color: var(--first-color-hover);
}

.social_icons{
    display: flex;
    margin-top: 5px;
}
.icon{
    display: flex;
    justify-content: center;
    align-items: center;
    width: 40px;
    height: 40px;
    border-radius: 50%;
    box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.25);
    cursor: pointer;
}
.icon:hover{
    color: var(--first-color);
}

/* ---------- FEATURED IMAGES BOX ---------- */


/* ---------- MAIN BOX ---------- */




/* ---------- MEDIA QUERY == 1024px / RESPONSIVE ---------- */


/* ---------- MEDIA QUERY == 900px / RESPONSIVE ---------- */

@media only screen and (max-width: 900px) {
    .nav-button{
        display: none;
    }
    .nav-menu.responsive{
        left: 0;
    }
    .nav-menu{
        position: fixed;
        top: 80px;
        left: 100%;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        background: red;
        backdrop-filter: blur(10px);
        width: 100%;
        min-height: 450px;
        height: 90vh;
        transition: .5s;

    }
    .nav_menu_list{
        flex-direction: column;
    }

    .nav-menu-btn{
        display: flex;
        align-items: center;
        justify-content: center;
    }

}

/* ---------- MEDIA QUERY == 540px / RESPONSIVE ---------- */


 

